started on third example and added an option to richcombo to allow a custom class to be added to the combo container. This gives stronger control over the styling of the drop down list.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -39,5 +39,19 @@
 				<option>nano</option>
 			</select>
 		</div>
+		<div class="third">
+			<h3>Drop Down with Icons</h3>
+			<p>The third example has styles applied and the background images necessary to make the richcombo appear as a drop down list of iconed selection options.</p>
+			<label for="thirdRichCombo">What editor do you use?</label>
+			<select id="thirdRichCombo" name="thirdRichCombo">
+				<option>Eclipse</option>
+				<option>IntelliJ</option>
+				<option>NetBeans</option>
+				<option>Visual Studio</option>
+				<option selected>Emacs</option>
+				<option>VI</option>
+				<option>nano</option>
+			</select>
+		</div>
 	</body>
 </html>
